@@ -8,7 +8,7 @@
 '\" RCS: @(#) $Id$
 '\" 
 .so man.macros
-.TH switch n 7.0 Tcl "Tcl Built-In Commands"
+.TH switch n 8.5 Tcl "Tcl Built-In Commands"
 .BS
 '\" Note:  do not modify the .SH NAME line immediately below!
 .SH NAME
@@ -50,6 +50,9 @@ expression matching
 (as described in the \fBre_syntax\fR reference page).
 '\" Options defined by TIP#75
 .VS 8.5
+.TP 10
+\fB\-nocase\fR
+Causes comparisons to be handled in a case-insensitive manner.
 .TP 10
 \fB\-matchvar\fR \fIvarName\fR
 This option (only legal when \fB\-regexp\fR is also specified)
